--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
-
+.center {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+    width: 100%;
+}
