--- a/style.css
+++ b/style.css
@@ -6,3 +6,19 @@
     margin-top: auto;
     width: 100%;
 }
+
+.centerAri {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.Ari {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
