--- a/index.css
+++ b/index.css
@@ -1,16 +1,16 @@
 .mainBody {
     font-size: 18px;
-    
+    line-height: 30px;
 }
 .mainBody-intro-container {
     display:flex;
-    justify-content:center;
+
 }
 .mainBody-intro{
     background-color: lightgoldenrodyellow;
-    padding: 100px 250px 100px 250px;
+    padding: 100px 1100px 100px 250px;
     margin: 50px 0px 50px 0px;
-    
+    text-align: left;
     
 }
 .mainBody-grid{
