fixed for phones

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 }
 .mainBody-intro{
     background-color: lightgoldenrodyellow;
-    padding: 100px 1100px 100px 250px;
+    padding: 100px 57.2% 100px 250px;
     margin: 50px 0px 50px 0px;
     text-align: left;
     
