made buttonBigger class

--- a/css/models.css
+++ b/css/models.css
@@ -10,3 +10,16 @@
     border-radius: 30px;
     text-align: left;
 }
+
+.buttonBigger {
+    color: #fff;
+    padding: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 30px;
+    display: inline-block;
+    border: none;
+    font-family: "Inter", sans-serif;
+    background: linear-gradient(90deg, hsla(99, 75%, 34%, 1), hsla(199, 75%, 34%, 1));
+    background-size: 100%;        
+  }
