--- a/css/footer.css
+++ b/css/footer.css
@@ -4,3 +4,16 @@
     font-family: Arial;
     font-weight: bold;
 }
+
+.image-center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.text-center {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
