--- a/css/footer.css
+++ b/css/footer.css
@@ -3,10 +3,7 @@
     font-size: small;
     font-family: Arial;
     font-weight: bold;
-}
-
-.image-center {
-    margin-left: auto;
+    border-radius: 13px;
     margin-right: auto;
     display: block;
 }
