--- a/css/index.css
+++ b/css/index.css
@@ -23,3 +23,10 @@
   border-radius: 30px;
   text-align: left;
 }
+
+.blue-purp-gradient {
+  border-radius: 13px;
+  background: linear-gradient(90deg, #0062ff 0%, #ff00f2 100%);
+          background-size : "400% 400%";
+          animation : "gradient 25s ease infinite";
+      }
