--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -43,6 +43,10 @@
   font-family: Arial;
 }
 
+.red-orange-gradient {
+    background: linear-gradient(45deg, #FF2CAA 0%, #ffff01 100%);
+    border-radius: 13px;
+}
 
 .blue-gradient {
   border-radius: 13px;
