--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -6,6 +6,15 @@
   font-family: Arial;
 }
 
+.mainBodyAlt {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
+    font-family: Arial;
+    padding: 7px;
+}
+
 .mainTitle {
   font-size: 36px;
   font-weight: bold;
