made homepage look better

--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -60,20 +60,20 @@
 .blue-gradient {
   border-radius: 13px;
   background: linear-gradient(90deg, hsla(217, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
-          background-size : "400% 400%";
-          animation : "gradient 25s ease infinite";
+          background-size : 400% 400%;
+          animation : gradient 25s ease infinite;
       }
         
-  @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  };
+@keyframes gradient {
+0% {
+    background-position: 0% 50%;
+}
+50% {
+    background-position: 100% 50%;
+}
+100% {
+    background-position: 0% 50%;
+}
+}
 
 
