made the blue darker

--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -59,7 +59,7 @@
 
 .blue-gradient {
   border-radius: 13px;
-  background: linear-gradient(90deg, hsla(217, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+  background: linear-gradient(90deg, #0000f4 0%, #00e5ff 100%);
           background-size : 400% 400%;
           animation : gradient 25s ease infinite;
       }
