added google fonts API integration

--- a/css/Header.css
+++ b/css/Header.css
@@ -46,6 +46,7 @@ body {
 
 .header-logoText {
   position: absolute;
+  font-family: 'Raleway', sans-serif;
 }
 
 @media screen and (max-width: 700px) {
