--- a/css/footer.css
+++ b/css/footer.css
@@ -14,3 +14,9 @@
     margin-right: auto;
     display: block;
 }
+
+.image-center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
