added comments to css

--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -1,3 +1,7 @@
+/* 
+Heads and Bodies
+*/
+
 .mainBody {
   margin-left: auto;
   margin-right: auto;
@@ -84,6 +88,10 @@
   font-family: Arial;
 }
 
+/* 
+Gradients and Keyframes
+*/
+
 .red-orange-gradient {
     background: linear-gradient(45deg, #FF2CAA 0%, #ffff01 100%);
     border-radius: 13px;
@@ -165,6 +173,25 @@
 }
 }
 
+.dark-blue-gradient {
+  border-radius: 13px;
+  background: linear-gradient(90deg, #00002d 0%, #0000ff 100%);
+          background-size : 400% 400%;
+          animation : gradient 25s ease infinite;
+      }
+        
+@keyframes gradient {
+0% {
+    background-position: 0% 50%;
+}
+50% {
+    background-position: 100% 50%;
+}
+100% {
+    background-position: 0% 50%;
+}
+}
+
 .rainbow-gradient {
   border-radius: 13px;
   background: linear-gradient(90deg, #ff0000 0%, #ffae00 15%, #ffff01 30%, #00ff00 45%, #00ffae 60%, #00ffff 75%, #0000ff 90%, #ff00ff 100%);
@@ -182,6 +209,10 @@
     background-position: 0% 50%;
 }
 }
+
+/* 
+Padding Rules
+*/
 
 .padding-small {
   padding-top: 5px;
