added a new gradient and started work on games page

--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -163,6 +163,25 @@ Gradients and Keyframes
 }
 }
 
+.dark-green-gradient {
+  border-radius: 13px;
+  background: linear-gradient(90deg, #114d0c 0%, #2AF598 100%);
+          background-size : 400% 400%;
+          animation : gradient 25s ease infinite;
+      }
+        
+@keyframes gradient {
+0% {
+    background-position: 0% 50%;
+}
+50% {
+    background-position: 100% 50%;
+}
+100% {
+    background-position: 0% 50%;
+}
+}
+
 .grey-gradient {
   border-radius: 13px;
   background: linear-gradient(90deg, #000000 0%, #676d6a 100%);
