--- a/css/index.css
+++ b/css/index.css
@@ -4,14 +4,16 @@
 }
 .mainBody-intro-container {
   display: flex;
-  background-color: lightgoldenrodyellow;
+  background-color: #0000f4;
 }
 .mainBody-intro {
   padding: 0px 0px 0px 250px;
   max-width: 800px;
   margin: 50px 0px 50px 0px;
   text-align: left;
+  color: white;
 }
+
 .mainBody-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
