--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@
 .mainBody-tile {
   padding: 50px;
   margin: 50px;
-  border: 5px solid lightblue;
+  border: 5px solid #8F8AE5;
   border-radius: 30px;
   text-align: left;
 }
