--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -2,6 +2,16 @@
 Heads and Bodies
 */
 
+.raleway {
+  font-family: 'Raleway', sans-serif;
+}
+
+.ralewayBold {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+}
+
+
 .mainBody {
   margin-left: auto;
   margin-right: auto;
