--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -3,8 +3,8 @@ Loader
 */
 
 .loader-wrapper {
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
