--- a/css/models.css
+++ b/css/models.css
@@ -16,11 +16,11 @@
   padding: 20px;
   padding-left: 30px;
   padding-right: 30px;
-  border-radius: 30px;
+  border-radius: 15px;
   display: inline-block;
   border: none;
   font-family: "Inter", sans-serif;
-  background: linear-gradient(90deg, #439816, #166f98);
+  background: gray;
   background-size: 100%;
 }
 
