--- a/css/games.css
+++ b/css/games.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color: #fff;
 }
 .mainBody-grid {
     display: grid;
@@ -9,6 +10,6 @@
     padding: 50px;
     margin: 50px;
     border: 5px solid #000000;
-    border-radius: 0px;
+    border-radius: 5px;
     text-align: left;
 }
