--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -80,7 +80,6 @@ Heads and Bodies
   width: 100%;
   text-align: center;
   font-family: Arial;
-  color: white;
 }
 
 .mainBodyAlt {
@@ -105,7 +104,6 @@ Heads and Bodies
 .mainTitle {
   font-size: 36px;
   font-weight: bold;
-  color: #000000;
   text-align: center;
   margin-top: auto;
   margin-bottom: auto;
@@ -116,7 +114,6 @@ Heads and Bodies
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
-    color: #000000;
     text-align: center;
     margin-top: auto;
     margin-bottom: auto;
@@ -127,7 +124,6 @@ Heads and Bodies
   font-size: 36px;
   font-style: normal;
   font-weight: 800;
-  color: #000000;
   text-align: center;
   margin-top: auto;
   margin-bottom: auto;
@@ -138,7 +134,6 @@ Heads and Bodies
 .mainTitle-white {
   font-size: 36px;
   font-weight: bold;
-  color: #FFFFFF;
   text-align: center;
   margin-top: auto;
   margin-bottom: auto;
@@ -149,7 +144,6 @@ Heads and Bodies
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
-    color: #FFFFFF;
     text-align: center;
     margin-top: auto;
     margin-bottom: auto;
@@ -366,3 +360,11 @@ Padding Rules
   padding-top: 1000px;
   padding-bottom: 1000px;
 }
+
+/*
+TailwindCSS
+*/
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
