--- a/css/output.css
+++ b/css/output.css
@@ -1,4 +1,74 @@
 /*
+Header
+*/
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 32px;
+  line-height: 25px;
+  border-radius: 15px;
+}
+
+.header a.logo {
+  padding: 0px 0px 0px 0px;
+  border: 5px solid black;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: #0000f4;
+  color: white;
+}
+
+.header-right {
+  float: right;
+  padding-top: 15px;
+}
+
+.header-logoText {
+  position: absolute;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+@media screen and (max-width: 700px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .header-right {
+    float: none;
+  }
+}
+
+
+/*
 Loader
 */
 
@@ -218,6 +288,7 @@ Heads and Bodies
   font-style: normal;
   font-weight: 600;
   text-align: center;
+  color: #fff;
   margin-top: auto;
   margin-bottom: auto;
   font-family: 'Raleway', sans-serif;
@@ -889,7 +960,6 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
 img,
 video {
   max-width: 100%;
-  height: auto;
 }
 
 /*
