dark moded the games page

--- a/css/games.css
+++ b/css/games.css
@@ -9,7 +9,7 @@
 .mainBody-tile {
     padding: 50px;
     margin: 50px;
-    border: 5px solid #000000;
+    border: 5px solid #a200ff;
     border-radius: 5px;
     text-align: left;
 }
