--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,26 @@
     font-weight: bold;
     border-radius: 13px;
     margin-right: auto;
-    display: block;
+    display: flex;
+}
+
+.footer-text {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.footer-bottom {
+    background-color: #c5c5c5;
+    font-size: smaller;
+    font-family: Arial;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .text-center {
