--- a/css/output.css
+++ b/css/output.css
@@ -310,7 +310,7 @@ Gradients and Keyframes
 
 .red-orange-gradient {
   border-radius: 13px;
-  background: linear-gradient(45deg, #FF2CAA 0%, #ffff01 100%);
+  background: linear-gradient(45deg, #FF2CAA 0%, #6f01ff 100%);
   background-size : 400% 400%;
   -webkit-animation : gradient 25s ease infinite;
           animation : gradient 25s ease infinite;
@@ -346,7 +346,7 @@ Gradients and Keyframes
 
 .blue-gradient {
   border-radius: 13px;
-  background: linear-gradient(90deg, #0000f4 0%, #00e5ff 100%);
+  background: linear-gradient(90deg, #0000f4 0%, #00ffcf 100%);
   background-size : 400% 400%;
   -webkit-animation : gradient 25s ease infinite;
           animation : gradient 25s ease infinite;
