made sime changes 3to the developments page

--- a/css/MasterStyle.css
+++ b/css/MasterStyle.css
@@ -293,6 +293,25 @@ background-position: 0% 50%;
 }
 }
 
+.UAD-gradient {
+  border-radius: 13px;
+  background: linear-gradient(90deg, #0003f9 0%, #00c00d 100%);
+          background-size : 400% 400%;
+          animation : gradient 25s ease infinite;
+      }
+        
+@keyframes gradient {
+0% {
+    background-position: 0% 50%;
+}
+50% {
+    background-position: 100% 50%;
+}
+100% {
+    background-position: 0% 50%;
+}
+}
+
 .green-gradient {
   border-radius: 13px;
   background: linear-gradient(90deg, #08AEEA 0%, #2AF598 100%);
