feat: :iphone: everything is now mobile ready

--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+* {
+    scroll-behavior: smooth;
+    scrollbar-color: blue;
+    accent-color: hsl(343, 100%, 65%);
+}
+*::selection {
+    background-color: hsl(343, 100%, 65%);
+    color: white;
+}
